--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "jaybizzle/laravel-crawler-detect": "^1.3",
         "laravel/framework": "^12.0",
         "laravel/horizon": "^v5.15.0",
+        "laravel/nightwatch": "^1.5",
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.5",
         "league/csv": "^9.8",
