--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,11 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
+        "larastan/larastan": "^3.1",
         "laravel/pint": "^1.5",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^8.1",
-        "larastan/larastan": "^3.1",
-        "phpunit/phpunit": "^12.1"
+        "pestphp/pest": "^3.8"
     },
     "autoload": {
         "psr-4": {
@@ -68,6 +68,7 @@
         "sort-packages": true,
         "allow-plugins": {
             "composer/package-versions-deprecated": true,
+            "pestphp/pest-plugin": true,
             "php-http/discovery": true
         }
     },
