--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -13,8 +13,42 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  linting-tests:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Copy .env
+        run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+
+      - name: Setup PHP with tools
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.4'
+
+      - name: Install Composer Dependencies
+        run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
+
+      - name: Generate key
+        run: php artisan key:generate
+
+      - name: Directory Permissions
+        run: chmod -R 777 storage bootstrap/cache
+
+      - name: PHPCS
+        run: vendor/bin/pint --parallel --test
+
+      - name: Check PSR Violations
+        run: composer dump-autoload --strict-psr
+
+      - name: PHPStan
+        run: vendor/bin/phpstan analyse
+
   laravel-tests:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        shard: [1, 2, 3]
 
     services:
       maria:
@@ -60,20 +94,11 @@ jobs:
       - name: Asset Storage Link
         run: php artisan storage:link
 
-      - name: PHPCS
-        run: vendor/bin/pint --test
-
-      - name: Check PSR Violations
-        run: composer dump-autoload --strict-psr
-
-      - name: Execute tests (With Coverage) via PHPUnit
+      - name: Execute tests (With Coverage) via Pest ${{ matrix.shard }}/3
         env:
           DB_PORT: ${{ job.services.maria.ports[3306] }}
           DB_CONNECTION: mysql
-        run: php artisan test --without-tty --coverage --min=100 --coverage-html=output
-
-      - name: PHPStan
-        run: vendor/bin/phpstan analyse --xdebug
+        run: ./vendor/bin/pest --coverage --min=100 --coverage-html=output ${{ matrix.shard }}/3
 
       - uses: actions/upload-artifact@v4
         if: failure()
